--- a/part3-backend/package.json
+++ b/part3-backend/package.json
@@ -7,7 +7,10 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "build:ui": "rm -rf build && cd ../part3-frontend/ && npm run build && cp -r build ../part3-backend/"
+    "build:ui": "rm -rf build && cd ../part3-frontend/ && npm run build && cp -r build ../part3-backend/",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy"
+
   },
   "author": "\"Pragati Poudel\"",
   "license": "MIT",
