--- a/part3-backend/package.json
+++ b/part3-backend/package.json
@@ -9,8 +9,8 @@
     "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../part3-frontend/ && npm run build && cp -r build ../part3-backend/",
     "deploy": "fly deploy",
-    "deploy:full": "npm run build:ui && npm run deploy"
-
+    "deploy:full": "npm run build:ui && npm run deploy",
+    "lint": "eslint ."
   },
   "author": "\"Pragati Poudel\"",
   "license": "MIT",
@@ -22,6 +22,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.20"
   }
 }
